--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "vuepress": "^1.2.0"
   },
   "dependencies": {
-    "markdown-it-katex": "^2.0.3"
+    "vuepress-plugin-mathjax": "^1.2.8"
   }
 }
